--- a/.docker/docker-compose.base.yaml
+++ b/.docker/docker-compose.base.yaml
@@ -66,6 +66,7 @@ services:
       - "$HOST_SSH_DIR:$CONTAINER_SSH_DIR"
       - "$HOST_GH_CONFIG_DIR:$CONTAINER_GH_CONFIG_DIR"
       - "$HOST_PASSAGE_DIR:$CONTAINER_PASSAGE_DIR"
+      - /raid/data/a202121010:/home/app/data
     deploy:
       resources:
         reservations:
