--- a/.docker/Dockerfile.base
+++ b/.docker/Dockerfile.base
@@ -15,7 +15,14 @@ RUN apt-get update --fix-missing \
     tzdata openssh-server \
     # Cleans up unnecessary packages to reduce image size
     && apt-get autoremove -y \
-    && apt-get clean -y
+    && apt-get clean -y \
+    && apt install wget \
+    && apt install unzip \
+    && wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb \
+    && apt -y install ./google-chrome-stable_current_amd64.deb \
+    && wget -O /tmp/chromedriver.zip http://chromedriver.storage.googleapis.com/` curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE`/chromedriver_linux64.zip \
+    && mkdir chrome \
+    && unzip /tmp/chromedriver.zip chromedriver -d /usr/src/chrome  
 
 # Sets Python environment variables
 ENV PIP_DEFAULT_TIMEOUT 100
@@ -95,11 +102,18 @@ ENV DOTFILES_APPLY_ROOTMOI=0
 ENV DOTFILES_USE_CODE=1
 ENV DOTFILES_USE_PYTHON_TOOLS=1
 ENV REMOTE_CONTAINERS=1
+
+
 # ENV DOTFILES_DEBUG=1
 
 RUN sh -c "$(wget -qO- https://dotfiles.entelecheia.ai/install)"
-USER root
 
+
+USER root
+RUN git clone https://github.com/ypilseong/data_preprocessing_review.git
+RUN apt-get -y install python3-pip
+RUN mkdir /home/app/data
+RUN apt install -y python3.10-venv
 # Copies entrypoint script from host into the image
 COPY ./.docker/scripts/entrypoint.sh /usr/local/bin/entrypoint.sh
 # Changes the entrypoint script permissions to make it executable
